--- a/charts/gitlab/templates/cm-gitlab-init.yaml
+++ b/charts/gitlab/templates/cm-gitlab-init.yaml
@@ -14,9 +14,9 @@ data:
         root_password: {{ $.Values.gitlab.rootPassword }}
         user_create: true
       tasks:
-        # - name: Pause for 5 minutes waiting for GitLab
-        #   ansible.builtin.pause:
-        #     minutes: 5
+        - name: Pause for 5 minutes waiting for GitLab
+          ansible.builtin.pause:
+            minutes: 5
 
         - name: Check GitLab Liveness
           ansible.builtin.uri:
