--- a/charts/gitlab/templates/cm-gitlab-init.yaml
+++ b/charts/gitlab/templates/cm-gitlab-init.yaml
@@ -30,9 +30,10 @@ data:
 
         - name: Generate root user personal token
           shell: |
-            echo -n "token = User.find(1).personal_access_tokens.create(name: 'apitoken', impersonation: false, scopes: [:api]); token.save!; token_value = token.token; File.open('/tmp/root.pat', 'w', 0600) { |file| file.write(token_value) }" | ./bin/rails console
-            personal_access_token=$(cat /tmp/root.pat)
-            oc create secret generic root-user-personal-token --from-literal=token=$personal_access_token -n {{ $.Release.Namespace }}
+            POD=$(oc get pod -l app=gitlab -n gitlab --no-headers | awk '{print $1}')
+            oc exec $POD -n {{ gitlab_namespace }} -- /bin/sh -c /scripts/create-root-pat.sh
+            ROOT_PAT=$(oc exec $POD -n {{ gitlab_namespace }} -- /bin/sh -c "cat /tmp/root.pat"
+            oc create s
 
         - name: Retrieve root token
           kubernetes.core.k8s_info:
