--- a/charts/gitlab/templates/cm-gitlab-init.yaml
+++ b/charts/gitlab/templates/cm-gitlab-init.yaml
@@ -31,8 +31,8 @@ data:
         - name: Generate root user personal token
           shell: |
             POD=$(oc get pod -l app=gitlab -n gitlab --no-headers | awk '{print $1}')
-            oc exec $POD -n {{ gitlab_namespace }} -- /bin/sh -c /scripts/create-root-pat.sh
-            ROOT_PAT=$(oc exec $POD -n {{ gitlab_namespace }} -- /bin/sh -c "cat /tmp/root.pat"
+            oc exec $POD -n {{ $.Release.Namespace }} -- /bin/sh -c /scripts/create-root-pat.sh
+            ROOT_PAT=$(oc exec $POD -n {{ $.Release.Namespace }} -- /bin/sh -c "cat /tmp/root.pat"
             oc create secret generic root-user-personal-token --from-literal=token=$ROOT_PAT -n {{ $.Release.Namespace }}
 
         - name: Retrieve root token
