--- a/charts/gitlab/templates/cm-gitlab-init.yaml
+++ b/charts/gitlab/templates/cm-gitlab-init.yaml
@@ -33,6 +33,7 @@ data:
             POD=$(oc get pod -l app=gitlab -n gitlab --no-headers | awk '{print $1}')
             oc exec $POD -n {{ $.Release.Namespace }} -- /bin/sh -c /scripts/create-root-pat.sh
             ROOT_PAT=$(oc exec $POD -n {{ $.Release.Namespace }} -- /bin/sh -c "cat /tmp/root.pat")
+            oc delete secret root-user-personal-token -n {{ $.Release.Namespace }} --ignore-not-found
             oc create secret generic root-user-personal-token --from-literal=token=$ROOT_PAT -n {{ $.Release.Namespace }}
 
         - name: Retrieve root token
