--- a/charts/gitlab/templates/cm-gitlab-root-pat.yaml
+++ b/charts/gitlab/templates/cm-gitlab-root-pat.yaml
@@ -9,4 +9,4 @@ data:
     #!/bin/bash
     set -e
     
-    echo -n "token = User.find(1).personal_access_tokens.create(name: 'apitoken', impersonation: false, scopes: [:api]); token.save!; token_value = token.token; File.open('/tmp/root.pat', 'w', 0600) { |file| file.write(token_value) }" | ./bin/rails console
+    echo -n "token = User.find(1).personal_access_tokens.create(name: 'apitoken', impersonation: false, expires_at: 365.days.from_now, scopes: [:api]); token.save!; token_value = token.token; File.open('/tmp/root.pat', 'w', 0600) { |file| file.write(token_value) }" | ./bin/rails console
