--- a/charts/gitlab/templates/cm-gitlab-init.yaml
+++ b/charts/gitlab/templates/cm-gitlab-init.yaml
@@ -61,6 +61,7 @@ data:
             body:
               import_sources: "git,github,gitea"
               version_check_enabled: "false"
+              allow_local_requests_from_web_hooks_and_services: "true"
             headers:
               PRIVATE-TOKEN: '{{ "{{" }} root_token {{ "}}" }}'
             validate_certs: false
