feat: support description param for gitlab groups

--- a/charts/gitlab/templates/cm-gitlab-init.yaml
+++ b/charts/gitlab/templates/cm-gitlab-init.yaml
@@ -110,6 +110,7 @@ data:
             body:
               name: {{ $item.name }}
               path: {{ $item.name }}
+              description: {{ default "" $item.description }}
               visibility: public
             headers:
               PRIVATE-TOKEN: '{{ "{{" }} root_token {{ "}}" }}'
