--- a/charts/gitlab/values.yaml
+++ b/charts/gitlab/values.yaml
@@ -23,6 +23,7 @@ gitlab:
     otp: "0123456789"
     secret: "0123456789"
   users:
+    base: user
     password: openshift
     count: 2
   groups: []
