--- a/charts/gitlab/templates/cm-gitlab-init.yaml
+++ b/charts/gitlab/templates/cm-gitlab-init.yaml
@@ -79,7 +79,7 @@ data:
               skip_confirmation: true
               username: {{ $.Values.gitlab.users.base }}{{ "{{" }} item {{ "}}" }}
               password: {{ $.Values.gitlab.users.password }}
-              name: {{ "{{" }}{{ $.Values.gitlab.users.base }}{{ "}}" }}{{ "{{" }} item {{ "}}" }} GitLab
+              name: {{ $.Values.gitlab.users.base }}{{ "{{" }} item {{ "}}" }} GitLab
             headers:
               PRIVATE-TOKEN: '{{ "{{" }} root_token {{ "}}" }}'
             validate_certs: false
