--- a/charts/devspaces/templates/operator-group.yaml
+++ b/charts/devspaces/templates/operator-group.yaml
@@ -7,5 +7,4 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
 spec:
-  targetNamespaces:
-  - {{ $.Values.devSpaces.operator.namespace }}
+  upgradeStrategy: Default
