--- a/charts/devspaces/templates/instance.yaml
+++ b/charts/devspaces/templates/instance.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: openshift-devspaces
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/hook: PostSync
 spec:
   devEnvironments:
     defaultEditor: che-incubator/che-code/latest
