--- a/charts/gitlab/templates/cm-gitlab-init.yaml
+++ b/charts/gitlab/templates/cm-gitlab-init.yaml
@@ -62,6 +62,7 @@ data:
               import_sources: "git,github,gitea"
               version_check_enabled: "false"
               allow_local_requests_from_web_hooks_and_services: "true"
+              auto_devops_enabled: "false"
             headers:
               PRIVATE-TOKEN: '{{ "{{" }} root_token {{ "}}" }}'
             validate_certs: false
